Correccion en chat

--- a/Ziip/Ziip/Info.plist
+++ b/Ziip/Ziip/Info.plist
@@ -42,6 +42,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>aps-environment</key>
-	<string>development</string>
+	<string>production</string>
 </dict>
 </plist>
