--- a/Ziip/Ziip/Info.plist
+++ b/Ziip/Ziip/Info.plist
@@ -43,5 +43,10 @@
 	</array>
 	<key>aps-environment</key>
 	<string>production</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
